--- a/server-ubuntu/logstash/sysmon.conf
+++ b/server-ubuntu/logstash/sysmon.conf
@@ -6,59 +6,115 @@ input {
 
 filter {
 
-  if [winlog] and [winlog][provider_name] == "Microsoft-Windows-Sysmon" {
-    mutate { add_tag => ["sysmon"] }
+  if [winlog][provider_name] == "Microsoft-Windows-Sysmon" {
 
-    if [winlog][event_data] {
-      ruby {
-        code => '
-          fields = {
-            "process.path" => "[winlog][event_data][Image]",
-            "process.command_line" => "[winlog][event_data][CommandLine]",
-            "process.parent.path" => "[winlog][event_data][ParentImage]",
-            "user.name" => "[winlog][event_data][User]",
-            "network.destination.ip" => "[winlog][event_data][DestinationIp]",
-            "network.destination.port" => "[winlog][event_data][DestinationPort]",
-            "network.transport" => "[winlog][event_data][Protocol]",
-            "registry.path" => "[winlog][event_data][TargetObject]",
-            "registry.value" => "[winlog][event_data][Details]",
-            "image.company" => "[winlog][event_data][Company]",
-            "image.product" => "[winlog][event_data][Product]",
-            "file.version" => "[winlog][event_data][FileVersion]"
-          }
-          fields.each do |k,v|
-            val = event.get(v)
-            event.set(k,val) if val
-          end
-        '
-      }
-    }
-
-    # Tagging per Event ID aman
-    if [winlog][event_id] {
-      mutate {
-        add_tag => [
-          "event_id_%{[winlog][event_id]}"
-        ]
-      }
-    }
-
-    # Remove field besar
     mutate {
-      remove_field => ["agent", "ecs", "host", "input", "log"]
+      add_tag => ["sysmon"]
     }
+
+    # EVENT METADATA (ECS)
+    mutate {
+      add_field => {
+        "[event][code]" => "%{[winlog][event_id]}"
+        "[event][kind]" => "event"
+        "[event][provider]" => "sysmon"
+      }
+    }
+
+    # EVENT ID 1 & 7 process
+    if [winlog][event_data][Image] {
+      mutate {
+        add_field => {
+          "[process][executable]" => "%{[winlog][event_data][Image]}"
+        }
+      }
+    }
+
+    if [winlog][event_data][CommandLine] {
+      mutate {
+        add_field => {
+          "[process][command_line]" => "%{[winlog][event_data][CommandLine]}"
+        }
+      }
+    }
+
+    if [winlog][event_data][ParentImage] {
+      mutate {
+        add_field => {
+          "[process][parent][executable]" => "%{[winlog][event_data][ParentImage]}"
+        }
+      }
+    }
+
+    # Derive process.name & parent.name
+    ruby {
+      code => '
+        p = event.get("[process][executable]")
+        event.set("[process][name]", File.basename(p)) if p
+      '
+    }
+
+    ruby {
+      code => '
+        p = event.get("[process][parent][executable]")
+        event.set("[process][parent][name]", File.basename(p)) if p
+      '
+    }
+
+    # EVENT ID 3
+    if [winlog][event_data][DestinationIp] {
+      mutate {
+        add_field => {
+          "[destination][ip]" => "%{[winlog][event_data][DestinationIp]}"
+        }
+      }
+    }
+
+    if [winlog][event_data][DestinationPort] {
+      mutate {
+        add_field => {
+          "[destination][port]" => "%{[winlog][event_data][DestinationPort]}"
+        }
+      }
+    }
+
+    if [winlog][event_data][Protocol] {
+      mutate {
+        add_field => {
+          "[network][transport]" => "%{[winlog][event_data][Protocol]}"
+        }
+      }
+    }
+
+    # USER
+    if [winlog][event_data][User] {
+      mutate {
+        add_field => {
+          "[user][name]" => "%{[winlog][event_data][User]}"
+        }
+      }
+    }
+
+    # EVENT CATEGORY
+    if [event][code] == "1" or [event][code] == "7" {
+      mutate { add_field => { "[event][category]" => "process" } }
+    }
+
+    if [event][code] == "3" {
+      mutate { add_field => { "[event][category]" => "network" } }
+    }
+
   }
 }
 
 output {
   if "sysmon" in [tags] {
     elasticsearch {
-      hosts => ["https://192.168.20.4:9200"]
+      hosts => ["https://192.168.20.13:9200"]
       user => "logstash_internal"
       password => "logstash"
       ssl_enabled => true
       ssl_certificate_authorities => ["/etc/logstash/certs/http_ca.crt"]
-
       index => "sysmon-%{+YYYY.MM.dd}"
       data_stream => false
     }
